# dron

./: LICENSE.txt  README.org  conftest.py  dron.py  lint  pyproject.toml  requirements.txt  ruff.toml  setup.py  systemd-email  systemdtab.py  tox.ini
.ci/: install-deps  run
.circleci/: config.yml
.github/workflows/: main.yml  pythonpackage.yml
dron/: __init__.py  api.py  common.py  launchd.py  launchd_wrapper.py  systemd.py  systemd_email.py
dron/notify/: common.py  email.py  ntfy_common.py  ntfy_desktop.py  ntfy_linux.py  ntfy_telegram.py
src/dron/: __init__.py  __main__.py  api.py  cli.py  common.py  conftest.py  dron.py  launchd.py  launchd_wrapper.py  logging.py  monitor.py  systemd.py
src/dron/notify/: common.py  email.py  ntfy_common.py  ntfy_desktop.py  ntfy_telegram.py  telegram.py
src/dron/tests/: test_dron.py
