# see https://github.com/karlicoss/pymplate for up-to-date reference
[project]
dynamic = ["version"]  # version is managed by build backend
name = "dron"
dependencies = [
    "click"         ,  # CLI
    "prompt_toolkit",  # CLI
    "tzlocal"       ,  # for monitor, to determine host timezone
    "textual"       ,  # for 'new' monitor
    "tabulate"      ,  # for 'old' monitor
    "termcolor"     ,  # for 'old' monitor
    "mypy"          ,  # for checking units
    "loguru"        ,  # nicer logging
    "dbus-python; platform_system != 'Darwin'",  # dbus interface to systemd
]
requires-python = ">=3.12"

## these are only useful for pypi
description = "What if cron and systemd had a baby?"
license     = {file = "LICENSE"}
authors     = [{name = "Dima Gerasimov (@karlicoss)", email = "karlicoss@gmail.com"}]
maintainers = [{name = "Dima Gerasimov (@karlicoss)", email = "karlicoss@gmail.com"}]

[project.urls]  # pypi will fetch some github stats/link, so somewhat useful
Homepage = "https://github.com/karlicoss/dron"
##


[project.optional-dependencies]
notify-telegram = [
    # version before that had a bug that prevented it from working
    # see https://github.com/rahiel/telegram-send/issues/115#issuecomment-1368728425
    "telegram-send>=0.37",
]

[dependency-groups]
testing = [
    "pytest>=9",  # need version 9 for proper namespace package support
    "ruff",

    "dron[notify-telegram]",
]
typecheck = [
    "mypy",
    "lxml", # for mypy html coverage
    "ty>=0.0.38",

    "types-tabulate",

    { include-group = "testing" },
]


[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# unfortunately have to duplicate project name here atm, see https://github.com/pypa/hatch/issues/1894
[tool.hatch.build.targets.wheel]
packages = ["src/dron"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "python-simplified-semver"
local_scheme = "dirty-tag"

[project.scripts]
dron = "dron.__main__:main"
